# CompositeCementStrength_PredictionModel

./: .dockerignore  Dockerfile  README.md  config.py  dvc.yaml  main.py  params.yaml  pyproject.toml
.github/workflows/: app.yaml  python-app.yml
app/: main.py  schemas.py  service.py
app/templates/: main.html
models/: scaler.pkl
research/: ResearchGuide.md  ann_model_pytorch.py  ann_model_tensorflow.py  mlmode.py
src/: data_ingestion.py  data_preprocessing.py  logger.py  model_builder.py  model_evaluator.py  model_predictor.py
src/MLModel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
