[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLModel"
version = "1.0.0"
description = "Composite Cement Strength Prediction Model Generated Using chandan-aiops"
authors = [
    {name = "Chandan Chaudhari", email = "chaudhari.chandan22@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "mlflow>=2.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "jinja2>=3.0.0",
    "dvc>=3.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
run-pipeline = "main:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
